[package]
name = "redpencil-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.29"
indicatif = "0.18"
ansi_term = "0.12"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tempfile = "3.10"
chrono = "0.4"
dirs = "6.0"
regex = "1.10"